[project]
name = "hydrogen_pfhx"
version = "0.0.1"
authors = [{ name = "Keelan O'Neill", email = "keelan.oneill@uwa.edu.au" }]
description = "Chemical engineering model of hydrogen plate-fin heat exchanger"
readme = "README.md"
url = "https://github.com/fsr-uwa/hydrogen-pfhx"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD-3-Clause license"
]
dependencies = ['CoolProp']
requires-python = ">=3.7"
